Compiler/simple.output
Grammar

    0 $accept: declaration $end

    1 declaration: type_specifier identifier_dum ';'

    2 type_specifier: FLOAT
    3               | INT

    4 identifier_dum: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
';' (59) 1
error (256)
FLOAT (258) 2
INT (259) 3
IDENTIFIER (260) 4


Nonterminals, with rules where they appear

$accept (7)
    on left: 0
declaration (8)
    on left: 1, on right: 0
type_specifier (9)
    on left: 2 3, on right: 1
identifier_dum (10)
    on left: 4, on right: 1


State 0

    0 $accept: . declaration $end

    FLOAT  shift, and go to state 1
    INT    shift, and go to state 2

    declaration     go to state 3
    type_specifier  go to state 4


State 1

    2 type_specifier: FLOAT .

    $default  reduce using rule 2 (type_specifier)


State 2

    3 type_specifier: INT .

    $default  reduce using rule 3 (type_specifier)


State 3

    0 $accept: declaration . $end

    $end  shift, and go to state 5


State 4

    1 declaration: type_specifier . identifier_dum ';'

    IDENTIFIER  shift, and go to state 6

    identifier_dum  go to state 7


State 5

    0 $accept: declaration $end .

    $default  accept


State 6

    4 identifier_dum: IDENTIFIER .

    $default  reduce using rule 4 (identifier_dum)


State 7

    1 declaration: type_specifier identifier_dum . ';'

    ';'  shift, and go to state 8


State 8

    1 declaration: type_specifier identifier_dum ';' .

    $default  reduce using rule 1 (declaration)
